avanzando maquetacion de primera pantalla y segunda, falta visualizar todos los elementos y validar formulario

--- a/public/main.css
+++ b/public/main.css
@@ -1,1 +1,1 @@
-.carousel .carousel-item>img{width:40%;height:55vh}.carousel .carousel-item>img .registro{width:20%;height:30vh}
+.carousel .carousel-item>img{width:50%;height:65vh}.carousel .carousel-item>img .registro{width:40%}.boton{background:#fbd43b}
