--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,10 +1,10 @@
-rojoBullet: #f64552;
-grisBullet: #f8f8f8;
-amarilloBotones: #fbd43b;
-grisDark: #212121;
-grisLetraSoft : #8f8f8f;
-turquesa: #00c3a3;
-moradoNumeros : #49233b;
-moradoLight : #451e36;
-moradoDark : #38052a;
+$rojo-ullet: #f64552;
+$grisBullet: #f8f8f8;
+$amarilloBotones: #fbd43b;
+$grisDark: #212121;
+$grisLetraSoft: #8f8f8f;
+$turquesa: #00c3a3;
+$moradoNumeros : #49233b;
+$moradoLight : #451e36;
+$moradoDark : #38052a;
 
