--- a/public/main.css
+++ b/public/main.css
@@ -1,1 +1,1 @@
-.carousel .carousel-item>img{width:50%;height:65vh}.carousel .carousel-item>img .registro{width:40%}.boton{background:#fbd43b}
+.carousel .carousel-slider{height:80vh}.carousel .carousel-item>img{width:50%;height:55vh}.boton{background:#fbd43b}.boton-slide{margin-top:2%}.contendor-slide{height:80vh}
