validacion primer formulario

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,9 +6,9 @@
 		height: 80vh;
 	}
 	.carousel-item>img {
-			width: 50%;
-			height: 55vh;
-		}
+		width: 50%;
+		height: 55vh;
+	}
 }
 
 .boton {
@@ -23,6 +23,8 @@
 	height: 80vh;
 }
 
-.ingresa-codigo {
-	
+.registro {
+	.titulo {
+		font-size: 1.5em;
+	}
 }
