--- a/public/views/ingresar-codigo.html
+++ b/public/views/ingresar-codigo.html
@@ -7,7 +7,7 @@
 		<title>Yape</title>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="../main.css">
 	</head>
 	<body>
 		<section class="container contenedor-codigo">
@@ -23,10 +23,10 @@
 								<p class="center">Enviamos un sms con el código de validación al número: <span id="telephoNumber"></span></p>
 							</div>
 							<div class="row">
-								<div class="input-field col offset-s1 s9">
+								<div class="input-field col offset-s1 s10">
 									<i class="material-icons prefix">lock</i>
-									<input id="candado" type="tel" required/>
-									<label for="candado"></label>
+									<input id="contenedor-codigo" type="tel" placeholder="Escribe tu codigo (5 digitos)  " required/>
+									<label for="contenedor-codigo"></label>
 								</div>
 							</div>
 						</div>
@@ -34,9 +34,9 @@
 				</form>
 			</div>
 		</section>
-		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
-		<script src="js/main.js"></script>
-		<script src="js/enviar-codigo.js"></script>
+		<script src="../js/main.js"></script>
+		<script src="../js/enviar-codigo.js"></script>
 	</body>
 </html>
