--- a/public/views/ingresar-codigo.html
+++ b/public/views/ingresar-codigo.html
@@ -25,7 +25,7 @@
 							<div class="row">
 								<div class="input-field col offset-s1 s10">
 									<i class="material-icons prefix">lock</i>
-									<input id="contenedor-codigo" type="tel" placeholder="Escribe tu codigo (5 digitos)  " required/>
+									<input id="contenedor-codigo" type="tel" placeholder="Ingresa código de 5 digitos" required/>
 									<label for="contenedor-codigo"></label>
 								</div>
 							</div>
