la maldicion del programador, adios avances

--- a/public/views/registro.html
+++ b/public/views/registro.html
@@ -13,7 +13,7 @@
 		<section class="container contenedor-registro">
 			<div class="row">
 				<div class="center">
-					<img class="responsive-img __icono" src="img/icons/phone.png" alt="icono">
+					<img class="responsive-img __icono" src="../img/icons/phone.png" alt="icono">
 				</div>
 			</div>
 			<form id="form" class="col s12">
@@ -40,9 +40,9 @@
 				</div>
 			</form>
 		</section>
-		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
-		<script src="js/main.js"></script>
-		<script src="js/registro.js"></script>
+		<script src="../js/main.js"></script>
+		<script src="../js/registro.js"></script>
 	</body>
 </html>
