--- a/public/views/ingresar-codigo.html
+++ b/public/views/ingresar-codigo.html
@@ -26,7 +26,7 @@
 								<div class="input-field col offset-s1 s10">
 									<i class="material-icons prefix">lock</i>
 									<input id="contenedor-codigo" type="tel" placeholder="Ingresa código de 5 digitos" required/>
-									<label for="contenedor-codigo"></label>
+									<label for="contenedor-codigo">Reintentar en <span id="contenedor-contador"></span> segundos</label>
 								</div>
 							</div>
 						</div>
