paranoia de que se borre

--- a/public/views/ingresar-codigo.html
+++ b/public/views/ingresar-codigo.html
@@ -26,7 +26,8 @@
 								<div class="input-field col offset-s1 s10">
 									<i class="material-icons prefix">lock</i>
 									<input id="contenedor-codigo" type="tel" placeholder="Ingresa código de 5 digitos" required/>
-									<label for="contenedor-codigo">Reintentar en <span id="contenedor-contador"></span> <i class="material-icons prefix">access_time</i> segundos</label>
+									<label for="contenedor-codigo"></label>
+									<p>Reintentar en <span id="contenedor-contador"> </span> <segundosa><i class="material-icons prefix">access_time</i></segundosa></p>
 								</div>
 							</div>
 						</div>
