comenzando a preparar archivo crear usuario

--- a/public/views/crear-usuario.html
+++ b/public/views/crear-usuario.html
@@ -7,7 +7,7 @@
 		<title>Yape</title>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
-		<link rel="stylesheet" href="../main.css">
+		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
 		<section class="container contenedor-crear-usuario">
@@ -52,8 +52,9 @@
 				<button id="crearCuenta"  type="submit" class="col offset-s4 s5 boton grey-text darken-text-2 boton" disabled>Crear cuenta</button>
 			</div>
 		</section>
-			<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+			<script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
-			<script src="app.js"></script>
+			<script src="../js/main.js"></script>
+			<script src="../js/crear-usuario.js"></script>
 			</body>
 		</html>
