--- a/public/views/ingresar-codigo.html
+++ b/public/views/ingresar-codigo.html
@@ -15,7 +15,7 @@
 				<div class="center">
 					<img class="responsive-img __icono" src="../img/icons/message.png" alt="icono">
 				</div>
-				<form class="col s12">
+				<form id="form-codigo" class="col s12">
 					<div class="row">
 						<div class="input-field">
 							<div class="row">
@@ -25,7 +25,7 @@
 							<div class="row">
 								<div class="input-field col offset-s1 s10">
 									<i class="material-icons prefix">lock</i>
-									<input id="contenedor-codigo" type="tel" placeholder="Ingresa código de 5 digitos" required/>
+									<input id="contenedor-codigo" type="tel" placeholder="Ingresa tú código" required/>
 									<label for="contenedor-codigo"></label>
 									<p>Reintentar en <span id="contenedor-contador"> </span> <segundosa><i class="material-icons prefix">access_time</i></segundosa></p>
 								</div>
